添加a链接跳转
新闻详情和rearch详情页面跳转

--- a/index.html
+++ b/index.html
@@ -131,60 +131,68 @@
                 </div>
                 <ul>
                     <li class="flex">
-                        <img src="images/news/news.png" alt="">
-                        <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
-                            <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
-                                nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
-                                testing
-                                requirements of various types of matrix samples and is widely usr …</p>
-                        </div>
-                        <div class="date">
-                            <span>14</span>
-                            <span>2023-09</span>
-                        </div>
+                        <a href="./newsDetail.html">
+                            <img src="images/news/news.png" alt="">
+                            <div class="cont">
+                                <h6>Lecture on Elemental Analyzer Tec...</h6>
+                                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                                    testing
+                                    requirements of various types of matrix samples and is widely usr …</p>
+                            </div>
+                            <div class="date">
+                                <span>14</span>
+                                <span>2023-09</span>
+                            </div>
+                        </a>
                     </li>
                     <li class="flex">
-                        <img src="images/news/news.png" alt="">
-                        <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
-                            <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
-                                nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
-                                testing
-                                requirements of various types of matrix samples and is widely usr …</p>
-                        </div>
-                        <div class="date">
-                            <span>14</span>
-                            <span>2023-09</span>
-                        </div>
+                        <a href="./newsDetail.html">
+                            <img src="images/news/news.png" alt="">
+                            <div class="cont">
+                                <h6>Lecture on Elemental Analyzer Tec...</h6>
+                                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                                    testing
+                                    requirements of various types of matrix samples and is widely usr …</p>
+                            </div>
+                            <div class="date">
+                                <span>14</span>
+                                <span>2023-09</span>
+                            </div>
+                        </a>
                     </li>
                     <li class="flex">
-                        <img src="images/news/news.png" alt="">
-                        <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
-                            <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
-                                nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
-                                testing
-                                requirements of various types of matrix samples and is widely usr …</p>
-                        </div>
-                        <div class="date">
-                            <span>14</span>
-                            <span>2023-09</span>
-                        </div>
+                        <a href="./newsDetail.html">
+                            <img src="images/news/news.png" alt="">
+                            <div class="cont">
+                                <h6>Lecture on Elemental Analyzer Tec...</h6>
+                                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                                    testing
+                                    requirements of various types of matrix samples and is widely usr …</p>
+                            </div>
+                            <div class="date">
+                                <span>14</span>
+                                <span>2023-09</span>
+                            </div>
+                        </a>
                     </li>
                     <li class="flex">
-                        <img src="images/news/news.png" alt="">
-                        <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
-                            <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
-                                nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
-                                testing
-                                requirements of various types of matrix samples and is widely usr …</p>
-                        </div>
-                        <div class="date">
-                            <span>14</span>
-                            <span>2023-09</span>
-                        </div>
+                        <a href="./newsDetail.html">
+                            <img src="images/news/news.png" alt="">
+                            <div class="cont">
+                                <h6>Lecture on Elemental Analyzer Tec...</h6>
+                                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                                    testing
+                                    requirements of various types of matrix samples and is widely usr …</p>
+                            </div>
+                            <div class="date">
+                                <span>14</span>
+                                <span>2023-09</span>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
