--- a/researchList.html
+++ b/researchList.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="item_r">
                         <p>Ultrafast Dynamics at Lipid-Water Interfaces</p>
-                        <a href="">Learn more</a>
+                        <a href="./researchDetail.html">Learn more</a>
                     </div>
                 </li>
             </ul>
