--- a/people.html
+++ b/people.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="item_r">
                             <div class="flex">
-                                <div class="personal_info">
+                                <div class="info">
                                     <p class="name">YunXiu Zhao</p>
                                     <p class="position">Postdoctoral Fellow</p>
                                     <p class="email">zhaoyunxiu@westlake.edu.cn</p>
@@ -121,7 +121,7 @@
                         </div>
                         <div class="item_r">
                             <div class="flex">
-                                <div class="personal_info">
+                                <div class="info">
                                     <p class="name">Muhammad Haroon</p>
                                     <p class="position">Postdoctoral Fellow</p>
                                     <p class="email">haroon@westlake.edu.cn</p>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="item_r">
                             <div class="flex">
-                                <div class="personal_info">
+                                <div class="info">
                                     <p class="name">Muhammad Sohail</p>
                                     <p class="position">Postdoctoral Fellow</p>
                                     <p class="email">sohail@westlake.edu.cn</p>
@@ -165,7 +165,7 @@
                         </div>
                         <div class="item_r">
                             <div class="flex">
-                                <div class="personal_info">
+                                <div class="info">
                                     <p class="name">ZiMing Gao</p>
                                     <p class="position">Research Assistant</p>
                                     <p class="email">gaoziming@westlake.edu.cn</p>
@@ -186,7 +186,7 @@
                         </div>
                         <div class="item_r">
                             <div class="flex">
-                                <div class="personal_info">
+                                <div class="info">
                                     <p class="name">HuiKe Zhang</p>
                                     <p class="position">Postdoctoral Fellow</p>
                                     <p class="email">zhanghuike@westlake.edu.cn</p>
@@ -206,7 +206,7 @@
                         </div>
                         <div class="item_r">
                             <div class="flex">
-                                <div class="personal_info">
+                                <div class="info">
                                     <p class="name">Dan Huang</p>
                                     <p class="position">Administrative Assistant</p>
                                     <p class="email">huangdan@westlake.edu.cn</p>
