--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><img src="./img/label.png" alt=""></li>
             <li class="flex">
                 <a href="people.html">PEOPLE</a>
-                <a href="newsList.html">News</a>
+                <a href="newsList.html">NEWS</a>
                 <a href="openings.html">RESOURCES</a>
             </li>
         </ul>
@@ -130,8 +130,8 @@
                     <a href="./newsList.html">Find more</a>
                 </div>
                 <ul>
-                    <li class="flex">
-                        <a href="./newsDetail.html">
+                    <li>
+                        <a href="./newsDetail.html" class="flex">
                             <img src="images/news/news.png" alt="">
                             <div class="cont">
                                 <h6>Lecture on Elemental Analyzer Tec...</h6>
@@ -146,8 +146,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="flex">
-                        <a href="./newsDetail.html">
+                    <li>
+                        <a href="./newsDetail.html" class="flex">
                             <img src="images/news/news.png" alt="">
                             <div class="cont">
                                 <h6>Lecture on Elemental Analyzer Tec...</h6>
@@ -162,8 +162,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="flex">
-                        <a href="./newsDetail.html">
+                    <li>
+                        <a href="./newsDetail.html" class="flex">
                             <img src="images/news/news.png" alt="">
                             <div class="cont">
                                 <h6>Lecture on Elemental Analyzer Tec...</h6>
@@ -178,8 +178,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="flex">
-                        <a href="./newsDetail.html">
+                    <li>
+                        <a href="./newsDetail.html" class="flex">
                             <img src="images/news/news.png" alt="">
                             <div class="cont">
                                 <h6>Lecture on Elemental Analyzer Tec...</h6>
