--- a/newsList.html
+++ b/newsList.html
@@ -45,7 +45,7 @@
             <li><img src="./img/label.png" alt=""></li>
             <li class="flex">
                 <a href="people.html">PEOPLE</a>
-                <a href="newsList.html">News</a>
+                <a href="newsList.html">NEWS</a>
                 <a href="openings.html">RESOURCES</a>
             </li>
         </ul>
@@ -58,8 +58,8 @@
     <div class="newsList pd90 main">
         <div class="wrap_box">
             <ul>
-                <li class="flex">
-                    <a href="./newsDetail.html">
+                <li>
+                    <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
                             <h6>Lecture on Elemental Analyzer Tec...</h6>
@@ -74,8 +74,8 @@
                         </div>
                     </a>
                 </li>
-                <li class="flex">
-                    <a href="./newsDetail.html">
+                <li>
+                    <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
                             <h6>Lecture on Elemental Analyzer Tec...</h6>
@@ -90,8 +90,8 @@
                         </div>
                     </a>
                 </li>
-                <li class="flex">
-                    <a href="./newsDetail.html">
+                <li>
+                    <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
                             <h6>Lecture on Elemental Analyzer Tec...</h6>
@@ -106,8 +106,8 @@
                         </div>
                     </a>
                 </li>
-                <li class="flex">
-                    <a href="./newsDetail.html">
+                <li>
+                    <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
                             <h6>Lecture on Elemental Analyzer Tec...</h6>
@@ -122,8 +122,8 @@
                         </div>
                     </a>
                 </li>
-                <li class="flex">
-                    <a href="./newsDetail.html">
+                <li>
+                    <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
                             <h6>Lecture on Elemental Analyzer Tec...</h6>
