--- a/openings.html
+++ b/openings.html
@@ -45,7 +45,7 @@
             <li><img src="./img/label.png" alt=""></li>
             <li class="flex">
                 <a href="people.html">PEOPLE</a>
-                <a href="newsList.html">News</a>
+                <a href="newsList.html">NEWS</a>
                 <a href="openings.html">RESOURCES</a>
             </li>
         </ul>
