--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
     <header>
         <div class="wrap_box flex">
             <div class="h-left flex">
+                <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
                 <a class="university" href="https://github.com/hugeRecycle/YouLab">
-                    <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
                 </a>
                 <a class="school" href="https://www.baidu.com/">
-                    SCHOOL OF
-                    <br>
-                    ENGINEERING
                 </a>
             </div>
             <div class="h-center">
@@ -28,7 +25,7 @@
             </div>
             <div class="h-right flex">
                 <img src="img/group.png" alt="">
-                <div class="btn_box">
+                <div class="btn_box flex">
                     <img src="img/earth_icon.png" alt="">
                     <span>中文</span>
                 </div>
