--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
             <li class="flex">
                 <a href="people.html">PEOPLE</a>
                 <a href="newsList.html">NEWS</a>
-                <a href="openings.html">RESOURCES</a>
+                <div class="resource">
+                    <span>RESOURCES</span>
+                    <div class="list">
+                        <a href="teaching.html">Teaching</a>
+                        <a href="energyConverter.html">Energy Converter</a>
+                    </div>
+                </div>
             </li>
         </ul>
     </menu>
