--- a/researchList.html
+++ b/researchList.html
@@ -92,7 +92,7 @@
                         <img src="images/research/img3.png" alt="">
                     </div>
                     <div class="item_r">
-                        <p>Exploring the Ultrafast Dynamics of Water in both in both bulk solution, biological interfaces and liquid-liquid phase separation systems</p>
+                        <p>Exploring the Ultrafast Dynamics of Water in both in both bulk solution, biological interfaces and liquid-liquid phase separation systems.</p>
                         <a href="">Learn more</a>
                     </div>
                 </li>
