--- a/publications.html
+++ b/publications.html
@@ -65,16 +65,16 @@
         <div class="publications">
             <div class="wrap_box pd90 clearfix">
                 <ul class="publications_nav">
-                    <li><a href="">2023</a></li>
-                    <li><a href="">2022</a></li>
-                    <li><a href="">2021</a></li>
-                    <li><a href="">2020</a></li>
-                    <li><a href="">2019</a></li>
-                    <li><a href="">Before</a></li>
+                    <li><a href="#2023">2023</a></li>
+                    <li><a href="#2022">2022</a></li>
+                    <li><a href="#2021">2021</a></li>
+                    <li><a href="#2020">2020</a></li>
+                    <li><a href="#2019">2019</a></li>
+                    <li><a href="#Before">Before</a></li>
                 </ul>
                 <div class="content_list">
                     <dl>
-                        <dt>2022</dt>
+                        <dt id="2022">2022</dt>
                         <dd>
                             You, X., Baiz, C. R. <a href="">“Importance of Hydrogen Bonding in Crowded Environments: A
                                 Physical Chemistry Perspective”.</a> J. Phys. Chem. A, 2022, 126 (35), 5881-5889.
@@ -88,7 +88,7 @@
                                 membranes.”</a> Chem. Phys., 2022, 156(7), 075102.</dd>
                     </dl>
                     <dl>
-                        <dt>2021</dt>
+                        <dt id="2021">2021</dt>
                         <dd>
                             You, X., Lee, E., Xu, C., Baiz, CR. <a href="">“Molecular Mechanism of Cell Membrane Protection
                                 by Sugars: A Study of Interfacial H-bond Networks”,</a> J. Phys. Chem. Lett., 2021, 12, 39,
@@ -100,7 +100,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt>2020</dt>
+                        <dt id="2020">2020</dt>
                         <dd>
                             You, X., Oh, K. I., Flanagan, J. C., Baiz, C. R., <a href="">“Liquid-Liquid Phase Separation
                                 Produces Fast H-Bond Dynamics in DMSO-Water Mixtures”,</a> J. Phys. Chem. Lett., 2020, 11,
@@ -113,7 +113,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt>2019</dt>
+                        <dt id="2019">2019</dt>
                         <dd>
                             Huang, C.W., You, X., Diemer, P.J., Petty, A.J., Anthony, J.E., Jurchescu, O.D. and Atkin, J.M.,
                             <a href="">“Micro-Raman imaging of isomeric segregation in small-molecule organic
@@ -121,7 +121,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt>Before</dt>
+                        <dt id="Before">Before</dt>
                         <dd>
                             McAfee, T.; Hoffman, B. C.; You, X.; Atkin, J. M.; Ade, H.; Dougherty, D. B., “Morphological,
                             Optical, and Electronic Consequences of Coexisting Crystal Orientations in beta-Copper
