--- a/publications.html
+++ b/publications.html
@@ -81,7 +81,8 @@
                         </dd>
                         <dd>
                             You, X., Thakur, N., Ray, A. P., Eddy, M. T., Baiz, C. R. <a href="">“A comparative study of
-                                interfacial environments in lipid nanodiscs and vesicles”.</a> Biophys. Rep., 2022, 2(3),
+                                interfacial environments in lipid nanodiscs and vesicles”.</a> Biophys. Rep., 2022,
+                            2(3),
                             100066.
                         </dd>
                         <dd>Lee, E., You, X., C. R. <a href="">“Interfacial dynamics in inverted-headgroup lipid
@@ -90,24 +91,32 @@
                     <dl>
                         <dt id="2021">2021</dt>
                         <dd>
-                            You, X., Lee, E., Xu, C., Baiz, CR. <a href="">“Molecular Mechanism of Cell Membrane Protection
-                                by Sugars: A Study of Interfacial H-bond Networks”,</a> J. Phys. Chem. Lett., 2021, 12, 39,
+                            You, X., Lee, E., Xu, C., Baiz, CR. <a
+                                href="https://pubs.acs.org/doi/abs/10.1021/acs.jpclett.1c02451">“Molecular Mechanism of
+                                Cell Membrane Protection
+                                by Sugars: A Study of Interfacial H-bond Networks”,</a> J. Phys. Chem. Lett., 2021, 12,
+                            39,
                             9602–9607
                         </dd>
                         <dd>
-                            You, X., Shirley, JC., Lee, E., Baiz, CR. <a href="">“Short- and Long-range Crowding Effects on
+                            You, X., Shirley, JC., Lee, E., Baiz, CR. <a
+                                href="https://www.sciencedirect.com/science/article/pii/S2666386421001090">“Short- and
+                                Long-range Crowding Effects on
                                 Water’s Hydrogen Bond Networks”.</a> Cell Rep. Physical Science., 2021, 2(5):100419.
                         </dd>
                     </dl>
                     <dl>
                         <dt id="2020">2020</dt>
                         <dd>
-                            You, X., Oh, K. I., Flanagan, J. C., Baiz, C. R., <a href="">“Liquid-Liquid Phase Separation
-                                Produces Fast H-Bond Dynamics in DMSO-Water Mixtures”,</a> J. Phys. Chem. Lett., 2020, 11,
+                            You, X., Oh, K. I., Flanagan, J. C., Baiz, C. R., <a
+                                href="https://par.nsf.gov/servlets/purl/10171186">“Liquid-Liquid Phase Separation
+                                Produces Fast H-Bond Dynamics in DMSO-Water Mixtures”,</a> J. Phys. Chem. Lett., 2020,
+                            11,
                             1903-1908.
                         </dd>
                         <dd>
-                            You, X., Casper, C.B., Lentz, E., Erie, D. A., Atkin, J.M., <a href="">“Fabrication of a
+                            You, X., Casper, C.B., Lentz, E., Erie, D. A., Atkin, J.M., <a
+                                href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7027439/">“Fabrication of a
                                 Biocompatible Mica/Gold Surface for Tip-Enhanced Raman Spectroscopy”,</a> ChemPhysChem,
                             2020, 21, 188.
                         </dd>
@@ -115,41 +124,51 @@
                     <dl>
                         <dt id="2019">2019</dt>
                         <dd>
-                            Huang, C.W., You, X., Diemer, P.J., Petty, A.J., Anthony, J.E., Jurchescu, O.D. and Atkin, J.M.,
-                            <a href="">“Micro-Raman imaging of isomeric segregation in small-molecule organic
+                            Huang, C.W., You, X., Diemer, P.J., Petty, A.J., Anthony, J.E., Jurchescu, O.D. and Atkin,
+                            J.M.,
+                            <a
+                                href="https://www.figma.com/exit?url=https%3A%2F%2Fwww.nature.com%2Farticles%2Fs42004-019-0122-7">“Micro-Raman
+                                imaging of isomeric segregation in small-molecule organic
                                 semiconductors”,</a> Commun. Chem., 2019. 2(1), pp.1- 7.
                         </dd>
                     </dl>
                     <dl>
                         <dt id="Before">Before</dt>
                         <dd>
-                            McAfee, T.; Hoffman, B. C.; You, X.; Atkin, J. M.; Ade, H.; Dougherty, D. B., “Morphological,
+                            McAfee, T.; Hoffman, B. C.; You, X.; Atkin, J. M.; Ade, H.; Dougherty, D. B.,<a
+                                href="https://www.researchgate.net/profile/Xiao-You-5/publication/305716696_Morphological_Optical_and_Electronic_Consequences_of_Coexisting_Crystal_Orientations_in_Beta_Copper_Phthalocyanine_Thin_Films/links/5b27c2cbaca2721ae7f8f962/Morphological-Optical-and-Electronic-Consequences-of-Coexisting-Crystal-Orientations-in-Beta-Copper-Phthalocyanine-Thin-Films.pdf">
+                            “Morphological,
                             Optical, and Electronic Consequences of Coexisting Crystal Orientations in beta-Copper
-                            Phthalocyanine Thin Films”. J. Phys. Chem. C, 2016, 120 (33), 18616-18621.
+                            Phthalocyanine Thin Films”</a>. J. Phys. Chem. C, 2016, 120 (33), 18616-18621.
                         </dd>
                         <dd>
                             Sun, H., Jiang, Y., Qiu, L., You, X., et al and Peng, H., <a href="">“Energy harvesting and
                                 storage devices fused into various patterns”</a> J. Mater. Chem. A, 2015,3, 14977-14984
                         </dd>
-                        <dd>You, X., Sun, X. and Peng, H. <a href="">“Aligned Carbon Nabotube Fiber for Energy conversion
+                        <dd>You, X., Sun, X. and Peng, H. <a href="">“Aligned Carbon Nabotube Fiber for Energy
+                                conversion
                                 and Storage”</a> Mater. China. 2014, 08-0696-04, 1674-3962.</dd>
-                        <dd>Sun, H., You, X., Jiang, Y. and Peng, H. <a href="">"Self-healable Electrically Conducting Wire
+                        <dd>Sun, H., You, X., Jiang, Y. and Peng, H. <a href="https://www.figma.com/exit?url=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1YnOQ43vSZQuoL2RpV93STuwn96TDNKV8%2Fview">"Self-healable Electrically Conducting
+                                Wire
                                 for Wearable Micro-Electronics"</a> Angew. Chem. Int. Ed. 2014, 53(36), 9526-9531.</dd>
-                        <dd>Sun, H., You, X., Deng, J., Chen, X., Yang, Z.; Peng, H. <a href="">"Novel Graphene/Carbon
+                        <dd>Sun, H., You, X., Deng, J., Chen, X., Yang, Z.; Peng, H. <a href="https://www.researchgate.net/profile/Xiao-You-5/publication/259918912_Novel_GrapheneCarbon_Nanotube_Composite_Fibers_for_Efficient_Wire-Shaped_Miniature_Energy_Devices/links/5b0ef3d7a6fdcc80995bb11b/Novel-Graphene-Carbon-Nanotube-Composite-Fibers-for-Efficient-Wire-Shaped-Miniature-Energy-Devices.pdf">"Novel Graphene/Carbon
                                 Nanotube Composite Fibers for Efficient Wire-Shaped Miniature Energy Devices."</a> Adv.
                             Mater. 2014, 26(18), 2868-2873.</dd>
                         <dd>Sun, H.; You, X.; Deng, J.; Chen, X.; Yang, Z.; Chen, P.; Peng, H. <a href="">“A Twisted
                                 Wire-shaped Energy Device with Dual Functions of Photoelectric Conversion and
                                 Electrochemical Storage”</a>, Angew. Chem. Int. Ed. 2014, 126(26), 6782-6786.</dd>
                         <dd>Sun, H., Che, R., You, X., Jiang, Y., Yang, Z., Deng, J., Qiu, L., Peng, H. <a
-                                href="">"Cross-stacking aligned carbon-nanotube films to tune microwave absorption
-                                frequencies and increase absorption intensities."</a> Adv. Mater., 2014, 26, 8120-8125.</dd>
-                        <dd>Sun, H.; Li, H.; You, X.; Yang, Z.; Peng, H. “Quasi-Solid-State, Coaxial, Fiber-Shaped
-                            Dye-Sensitized Solar Cells”, J. Mater. Chem. A. 2014, 2, 345-349.</dd>
-                        <dd>Sun, H., You, X., Yang, Z., Deng, J. and Peng, H. <a href="">“Winding Ultrathin, Transparent,
+                                href="https://drive.google.com/file/d/1Cqgz8klXr7q0Cpm2lQpqq28vE3ERzEpv/view">"Cross-stacking aligned carbon-nanotube films to tune microwave absorption
+                                frequencies and increase absorption intensities."</a> Adv. Mater., 2014, 26, 8120-8125.
+                        </dd>
+                        <dd>Sun, H.; Li, H.; You, X.; Yang, Z.; Peng, H.<a href="https://fiber.fudan.edu.cn/Assets/userfiles/sys_eb538c1c-65ff-4e82-8e6a-a1ef01127fed/files/2014/81.pdf">“Quasi-Solid-State, Coaxial, Fiber-Shaped
+                            Dye-Sensitized Solar Cells”</a>, J. Mater. Chem. A. 2014, 2, 345-349.</dd>
+                        <dd>Sun, H., You, X., Yang, Z., Deng, J. and Peng, H. <a href="https://fiber.fudan.edu.cn/Assets/userfiles/sys_eb538c1c-65ff-4e82-8e6a-a1ef01127fed/files/2013/75.pdf">“Winding Ultrathin,
+                                Transparent,
                                 and Electrically Conductive Carbon Nanotube Sheet into High-Performance Fiber-Shaped
                                 Dye-Sensitized Solar Cell"</a>. J. Mater. Chem. A, 2013, 1, 12422- 12425.</dd>
-                        <dd>Sun, H., Yang, Z., Chen, X., Qiu, L., You, X., Chen, P. and Peng, H. <a href="">“Photovoltaic
+                        <dd>Sun, H., Yang, Z., Chen, X., Qiu, L., You, X., Chen, P. and Peng, H. <a
+                                href="https://fiber.fudan.edu.cn/Assets/userfiles/sys_eb538c1c-65ff-4e82-8e6a-a1ef01127fed/files/2013/70.pdf">“Photovoltaic
                                 Wire with High Efficiency Attached onto and Detached from a Substrate Using a Magnetic
                                 Field”</a>. Angew. Chem. Int. Ed., 2013, 52, 8276-8280.</dd>
                     </dl>
