--- a/publications.html
+++ b/publications.html
@@ -14,16 +14,13 @@
     <header>
         <div class="wrap_box flex">
             <div class="h-left flex">
+                <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
                 <a class="university" href="https://github.com/hugeRecycle/YouLab">
-                    <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
                 </a>
                 <a class="school" href="https://www.baidu.com/">
-                    SCHOOL OF
-                    <br>
-                    ENGINEERING
                 </a>
             </div>
-            <div class="h-center flex">
+            <div class="h-center">
                 <h2>Multidimentional nanospectroscopy laboratory </h2>
             </div>
             <div class="h-right flex">
