--- a/teaching.html
+++ b/teaching.html
@@ -14,13 +14,10 @@
     <header>
         <div class="wrap_box flex">
             <div class="h-left flex">
-                <a class="university flex" href="https://github.com/hugeRecycle/YouLab">
-                    <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
+                <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
+                <a class="university" href="https://github.com/hugeRecycle/YouLab">
                 </a>
                 <a class="school" href="https://www.baidu.com/">
-                    SCHOOL OF
-                    <br>
-                    ENGINEERING
                 </a>
             </div>
             <div class="h-center">
