--- a/publications.html
+++ b/publications.html
@@ -43,12 +43,9 @@
             <li class="flex">
                 <a href="people.html">PEOPLE</a>
                 <a href="newsList.html">NEWS</a>
-                <div class="resource">
-                    <span>RESOURCES</span>
-                    <div class="list">
-                        <a href="teaching.html">Teaching</a>
-                        <a href="energyConverter.html">Energy Converter</a>
-                    </div>
+                <div class="h-right flex">
+                    <img src="img/group.png" alt="">
+                    <span>中文</span>
                 </div>
             </li>
         </ul>
