--- a/index.html
+++ b/index.html
@@ -87,11 +87,22 @@
         <div class="research pd90">
             <div class="wrap_box">
                 <div class="research_l">
-                    <h3 class="title">Research Focuses</h3>
+                    <div>
+                        <h3 class="title">Research Focuses</h3>
                     <p>Our focus is on unraveling the mysteries of surface/interface phenomena and the dynamic
                         structures of
                         liquids.</p>
                     <a href="./researchList.html">Learn more</a>
+                    </div>
+                    <div class="pagination">
+                        <img src="./img/left_jiantou.png" alt="">
+                        <span class="p_item">1</span>
+                        <span class="p_item">2</span>
+                        <span class="p_item">3</span>
+                        <span class="p_item">4</span>
+                        <span class="p_item">5</span>
+                        <img src="./img/right_jiantou.png" alt="">
+                    </div>
                 </div>
                 <div class="research_r">
                     <img src="images/research/img1.png" alt="">
