--- a/energyConverter.html
+++ b/energyConverter.html
@@ -69,6 +69,47 @@
    });
 
 </script>
+<script>
+    function unitConversion(source, valNum) {
+        valNum = parseFloat(valNum);
+        var input_cm = document.getElementById("input_cm");
+        var input_nm = document.getElementById("input_nm");
+        var input_um = document.getElementById("input_um");
+        var input_meV = document.getElementById("input_meV");
+        var input_J = document.getElementById("input_J");
+        if (source == "input_cm") {
+            input_nm.value = (10000000 / valNum).toFixed(5);
+            input_um.value = (10000 / valNum).toFixed(5);
+            input_meV.value = (valNum * 0.123984193).toFixed(5);
+            input_J.value = (valNum * 0.123984193 / 1000000 * 1.60217646e-19).toFixed(5);
+        }
+        if (source == "input_nm") {
+            input_cm.value = (10000000 / valNum).toFixed(5);
+            input_um.value = (valNum * 0.001).toFixed(5);
+            input_meV.value = (1239841.93 / valNum).toFixed(5);
+            input_J.value = (1239841.93 / valNum / 1000000 * 1.60217646e-19).toFixed(5);
+        }
+        if (source == "input_um") {
+            input_cm.value = (10000 / valNum).toFixed(5);
+            input_nm.value = (valNum * 1000).toFixed(5);
+            input_meV.value = (1239.84193 / valNum).toFixed(5);
+            input_J.value = (1239.84193 / valNum / 1000000 * 1.60217646e-19).toFixed(5);
+        }
+        if (source == "input_meV") {
+            input_cm.value = (valNum * 8.065544290795).toFixed(5);
+            input_nm.value = (1239841.93 / valNum).toFixed(5);
+            input_um.value = (1239.84193 / valNum).toFixed(5);
+            input_J.value = (valNum / 1000000 * 1.60217646e-19).toFixed(5);
+        }
+        if (source == "input_J") {
+            input_meV.value = (valNum / 1.60217646e-19 * 1000000).toFixed(5);
+            input_cm.value = (valNum / 1.60217646e-19 * 1000000 * 8.065544290795).toFixed(5);
+            input_nm.value = (1239841.93 / valNum / 1.60217646e-19 * 1000000).toFixed(5);
+            input_um.value = (1239.84193 / valNum / 1.60217646e-19 * 1000000).toFixed(5);
+        }
+
+    }
+</script>
 
 <body>
     <header>
@@ -125,25 +166,25 @@
                 <div class="content_top flex">
                     <div>
                         <label>nm</label>
-                        <input />
+                        <input id="input_nm" oninput="unitConversion(this.id,this.value)" onchange="unitConversion(this.id,this.value)" type="number"/>
                     </div>
                     <div>
                         <label>μm</label>
-                        <input />
+                        <input id="input_um" oninput="unitConversion(this.id,this.value)" onchange="unitConversion(this.id,this.value)" type="number"/>
                     </div>
                     <div>
                         <label>cm⁻¹</label>
-                        <input />
+                        <input id="input_cm" oninput="unitConversion(this.id,this.value)" onchange="unitConversion(this.id,this.value)" type="number"/>
                     </div>
                 </div>
                 <div class="content_bottom flex">
                     <div>
                         <label>meV</label>
-                        <input />
+                        <input id="input_meV" oninput="unitConversion(this.id,this.value)" onchange="unitConversion(this.id,this.value)" type="number"/>
                     </div>
                     <div>
                         <label>joules</label>
-                        <input />
+                        <input id="input_J" oninput="unitConversion(this.id,this.value)" onchange="unitConversion(this.id,this.value)" type="number"/>
                     </div>
                     <div></div>
                 </div>
