--- a/publications.html
+++ b/publications.html
@@ -25,10 +25,7 @@
             </div>
             <div class="h-right flex">
                 <img src="img/group.png" alt="">
-                <div class="btn_box flex">
-                    <img src="img/earth_icon.png" alt="">
-                    <span>中文</span>
-                </div>
+                <span>中文</span>
             </div>
         </div>
     </header>
@@ -43,9 +40,12 @@
             <li class="flex">
                 <a href="people.html">PEOPLE</a>
                 <a href="newsList.html">NEWS</a>
-                <div class="h-right flex">
-                    <img src="img/group.png" alt="">
-                    <span>中文</span>
+                <div class="resource">
+                    <span>RESOURCES</span>
+                    <div class="list">
+                        <a href="teaching.html">Teaching</a>
+                        <a href="energyConverter.html">Energy Converter</a>
+                    </div>
                 </div>
             </li>
         </ul>
